# rust-content

./: Cargo.toml  README.md
migrations/: 0001_init_content.down.sql  0001_init_content.up.sql  0002_add_content_derived.down.sql  0002_add_content_derived.up.sql
src/: clock.rs  error.rs  input.rs  lib.rs  service.rs  status.rs  store.rs  types.rs
src/repo/: memory.rs  mod.rs  postgres.rs
tests/: content_repo_conformance.rs
